[package]
name = "thorust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = {version="0.6.3", features=["all"]}
yaml-rust = "0.4.5"
serde_yaml = "0.9"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
tokio = {version = "1.0", features = ["full"]}
anyhow = "1.0.72"
uuid = {version = "1.4.1", features = ["v4"]}
strum = "0.25"
strum_macros = "0.25"
async-trait = "0.1.72"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
colored = "2.0.4"
clap = { version = "4.3.19", features = ["derive"] }

[[bin]]
name = "cli"
path = "src/cmd/main.rs"
